src/App.css
/* ... */
#commentary_text h3 div
{
	font-size:30px;
	color:#000;
}

#commentary_text img.ver
{
	border: 1px solid black;
	float:right;
	margin-left:10px;
	height:154px;
	width:100px;
	margin-top:5px;
}

.src_tabs
{
	padding-left:10px;
  	white-space: no-wrap;
  	overflow:hidden;
  	height:18px;
}
.src_tabs span
{
	font-size:15px;
	border:1px solid #999;
	background-color:#999;
	color:#DDD;
	border-bottom:0;
	border-top-right-radius:5px;
	border-top-left-radius:5px;
	line-height:17px;
	padding-left:10px;
	padding-right:10px;
	margin-right:6px;
  	white-space: no-wrap;
  	float:left;
	cursor:pointer;
}

.src_tabs span.more
{
	float:right;
	background-color:#FFF;
	color:#333;
	width:15px;
	text-align:center;
	padding-left:3px;
	padding-right:3px;
}
.src_tabs span.more:hover
{
	color:#000;

}
.src_tabs select
{
	float:right;
  	font-family: 'Comfortaa';
	width:30px;
	border-top-left-radius:5px;
	border-top-right-radius:5px;
	line-height:15px;
}

.safari .src_tabs select
{
	height:15px;
}

.src_tabs span.selected
{
	border:1px solid #555;
	background-color:#555;
}

.src_tabs span:hover
{
	color:white;
	border:1px solid #666;
}

button#commentary
{

	font-family: 'Comfortaa';
	position:relative;
	bottom:7px;
}

.text_heading em
{
	font-style:italic;
	line-height:20px;
	font-size:18px;
	color:#999;
}

#audio_heading
{

	line-height:20px;
}

#audio_heading div
{
	font-size:12px;
	border:2px solid #000;
	font-family:'Comfortaa', Helvetica, Arial, sans-serif;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	line-height:20px;
	padding-left:10px;
	border-radius:10px;
	background-color:#666;
	height:22px;

	float:left;
	margin-right:5px;
	flex: auto;
}

#audio_heading
{
	display: flex;
}
#audio_heading button{
	height:20px;
	width: 20px;
	border-radius: 10px;
	border-color: #AAA;
	text-align: center;
	padding: 0;
	line-height: 100%;
	margin: 2px;
	margin-right: 5px;
	font-size: 10px;
	cursor: pointer;
}
#audio_heading button:hover{
	color: #888;
}

.safari #audio_heading div
{
	letter-spacing:-1px;
}

#audio_heading div:hover,
#audio_heading div.active_audio
{

	background-color:#333;
}
#audio_heading div img
{
	height:16px;
	position:relative;
    top: 2px;
    margin-right:3px;
    width:16px;
}


#audio_heading div img#com_option
{
	position:absolute;
    margin-right: 3px;
    top:2px;
    right:0;
}


#audio_heading div img#com_option:hover
{
	opacity:0.8;
    top:1px;
}


#audio_commentary select
{
	width:165px;
	border-radius:5px;
	position:relative;
	left:-5px;
	top:1px;
	background-color:#DDD;
	color:#000;
    font-family: 'Comfortaa';
}

.heading_subtitle.commentary img
{
	float:right;
	position:absolute;
	top:5px;
	right:5px;
}

.nexttag
{
	float:right;
	font-size:30px;
	color:#555;
}
.nexttag:hover
{
	color:#000;
}
.prevtag
{
	float:left;
	font-size:30px;
	color:#555;
}
.prevtag:hover
{
	color:#000;
}

#audio_heading div#audio_verse.noaudio,
#audio_heading div#audio_verse.noaudio:hover
{
	color:#999;
	border-color:#999;
	background-color:#666;
	cursor:not-allowed;
}

#audio_heading div#audio_verse.noaudio img
{
	opacity:0.3;
}



/* Tag Meta */

.treegrid-indent {width:8px; height: 16px; display: inline-block; position: relative;}

.treegrid-expander {width:16px; height: 16px; display: inline-block; position: relative; cursor: pointer;}

.treegrid-expander-expanded{background-image: url(./img/interface/collapse.png); }
.treegrid-expander-collapsed{background-image: url(./img/interface/expand.png);}

.loading
{
	text-align:center;
	font-style:italic;
	font-size:14px;
	color:black;
}

#floater
{
	position:absolute;
	top:183px;
	left:846px;
	width:442px;
	background-color:#448;
	border-top-left-radius:0px;
	border-top-right-radius:0px;
}
.infoOpen #floater
{
	top:483px;
	transition: top 0.5s;
}
.commentaryMode #floater
{
	top:629px;
	transition: top 0.5s;
}

.noclick, .noclick > div.taglink
{
	cursor:not-allowed;
}
.gridTag:hover
{
	position:relative;
	bottom:3px;
}

.gridTag:active
{
	position:relative;
	top:3px;
}

.preview
{
	margin:10px;
}

.preview blockquote
{
	margin:3px;
}



.infoOpen .tag_meta
{
	height:320px;
	transition: height 0.5s;
	overflow-y:auto;
	overflow-x:hidden;
	text-align:left;
}

.hoverSectionHeading
{
	background-color: #C5EEF3!important;
    border-top: 2px solid #103D50!important;
    border-bottom: 1px dotted #103D50!important;
}



.heading_subtitle img.tag
{
	float:right;
}

.heading_subtitle img.play
{
	float:left;
}

.base_root > div:first-child
{
	display:none;
}

.base_root
{
	margin-left:20px;
	border-left:1px solid #999;
}




.tagtree .tagtree .tagtree
{
  margin-left:20px;
  border-left:1px solid #999;

  padding-bottom:15px;
  margin-bottom:-15px;
}
.tagtree .leaf,
.tagtree .branch
{
  border-left:1px solid #999;
  margin-left:10px;
  padding-left:10px;
  padding-top:2px;
  border-bottom:1px solid #999;
}
.tagtree .leaf:hover .tagDesc,
.tagtree .branch:hover .tagDesc
{
	color:black;
	background-color:#EFF;
	cursor:default;
}

#verse .taglink
{
	margin-right:6px;
}
.tagtree .leaf
{

  margin-left:20px;

}
.tagtree .highlight .tagDesc
{
	background-color:#FFA;
	color:black;
}
.tagtree .leaf.highlight .taglink
{
	cursor:not-allowed;
	background-color: #467386;
    color: #FFF;
}

#text .tagtree .base_RecentlyViewedTags
{
	margin-bottom:20px;
}

#text .tagtree .base_RecentlyViewedTags .taglink.parentTag
{
	background-color:#FFA;
	color:#000;
	border-color:#ff3300;
	letter-spacing:1px;
}

.tagtree .branch
{

  padding-bottom:0px;


}
.tagtree .branch .taglink
{
	margin-left:3px;
}
.tagtree .branch .taglink:before
{
	content:"◀";
	line-height:15px;
	font-size:15px;
	color:#448;
    position:           absolute;
    margin-left:        -15px;
    margin-top:        2px;
}
.tagtree .branch.open .taglink:before
{
	content:"▼";
    margin-left:        -4px;
    margin-top:        16px;
}


.tagtree .branch .taglink:hover:before,
.tagtree .branch.open .taglink:hover:before
{
	color:#73A8DA;
}
/* ... */

